--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile 'com.facebook.stetho:stetho-js-rhino:1.5.0'
-
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
