--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
             android:label="@string/title_activity_completion"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".selection.ItemsSelectionActivity"
+            android:label="@string/title_activity_items_selection"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
