--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
             android:label="@string/title_activity_items_selection"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".opportunity.CreateOpportunityActivity"
+            android:label="@string/title_activity_create_opportunity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
