Getting location from google places.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,10 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBehR1IArkVcjN9kYItMzGi9cUshP-R3aI"/>
+
     </application>
 
 </manifest>
